# goit-ds-hw-02

./: README.md  create.py  modify.py  pyproject.toml  seed.py  tasks.sql
